refactor: layers to entity

--- a/packages/studio/styled-system/tokens/index.css
+++ b/packages/studio/styled-system/tokens/index.css
@@ -1,4 +1,4 @@
-@layer tokens {
+@layer @layer tokens {} {
     :where(:root, :host) {
   --borders-none: none;
   --easings-default: cubic-bezier(0.4, 0, 0.2, 1);
