BREAKING: remove @pandacss/astro in favor of just using @pandacss/postcss

--- a/sandbox/astro/src/pages/index.astro
+++ b/sandbox/astro/src/pages/index.astro
@@ -3,7 +3,7 @@ import Layout from '../layouts/Layout.astro'
 import { Button } from '../components/button.jsx'
 import Card from '../components/Card.astro';
 import { css } from '../../styled-system/css'
-import { circle, hstack } from '../../panda/patterns'
+import { circle, hstack } from '../../styled-system/patterns'
 ---
 
 <Layout title="Welcome to Astro.">
