--- a/packages/studio/src/components/theme-toggle.astro
+++ b/packages/studio/src/components/theme-toggle.astro
@@ -17,7 +17,7 @@ const buttonStyles = hstack({
 const iconStyles = css({
     cursor: 'pointer',
     '&.active': {
-        color: 'yellow.300',
+        color: 'accent',
     },
 })
 ---
