--- a/packages/studio/src/layouts/Layout.astro
+++ b/packages/studio/src/layouts/Layout.astro
@@ -1,7 +1,7 @@
 ---
 import '../../styled-system/styles.css'
 import Head from '../components/head.astro'
-import context from '../lib/panda.context'
+import * as context from '../lib/panda-context'
 ---
 
 <!DOCTYPE html>
@@ -17,3 +17,4 @@ import context from '../lib/panda.context'
     <slot />
   </body>
 </html>
+
