--- a/packages/studio/src/pages/colors.astro
+++ b/packages/studio/src/pages/colors.astro
@@ -1,5 +1,5 @@
 ---
-import { Colors } from '../components/colors'
+import Colors from '../components/colors'
 import Layout from '../layouts/Layout.astro'
 import Sidebar from '../layouts/Sidebar.astro'
 ---
