--- a/packages/studio/src/pages/index.astro
+++ b/packages/studio/src/pages/index.astro
@@ -1,5 +1,5 @@
 ---
-import { Overview } from '../components/overview'
+import Overview from '../components/overview'
 import Layout from '../layouts/Layout.astro'
 ---
 
