--- a/packages/studio/src/pages/layer-styles.astro
+++ b/packages/studio/src/pages/layer-styles.astro
@@ -1,5 +1,5 @@
 ---
-import { LayerStyles } from '../components/layer-styles'
+import LayerStyles from '../components/layer-styles'
 import Layout from '../layouts/Layout.astro'
 import Sidebar from '../layouts/Sidebar.astro'
 ---
