--- a/packages/studio/src/pages/radii.astro
+++ b/packages/studio/src/pages/radii.astro
@@ -1,5 +1,5 @@
 ---
-import { Radii } from '../components/radii'
+import Radii from '../components/radii'
 import Layout from '../layouts/Layout.astro'
 import Sidebar from '../layouts/Sidebar.astro'
 ---
