--- a/packages/studio/src/pages/text-styles.astro
+++ b/packages/studio/src/pages/text-styles.astro
@@ -1,5 +1,5 @@
 ---
-import { TextStyles } from '../components/text-styles'
+import TextStyles from '../components/text-styles'
 import Layout from '../layouts/Layout.astro'
 import Sidebar from '../layouts/Sidebar.astro'
 ---
