--- a/packages/studio/src/components/side-nav-item.astro
+++ b/packages/studio/src/components/side-nav-item.astro
@@ -18,7 +18,7 @@ const isActive = Astro.url.pathname.startsWith(href)
     fontSize="md"
     fontWeight="medium"
     aria-current={isActive ? 'page' : undefined}
-    color={{ _hover: 'yellow.300', _currentPage: 'yellow.300' }}
+    color={{ _hover: 'accent', _currentPage: 'accent' }}
   >
     <slot />
   </panda.a>
