--- a/packages/studio/src/layouts/Sidebar.astro
+++ b/packages/studio/src/layouts/Sidebar.astro
@@ -1,10 +1,10 @@
 ---
 import { Container, panda, Stack } from '../../styled-system/jsx'
 import '../../styled-system/styles.css'
-import { Logo } from '../components/logo'
 import SideNav from '../components/side-nav.astro'
 import ThemeToggle from '../components/theme-toggle.astro'
-import context from '../lib/panda.context'
+import { Logo } from '../icons/logo'
+import * as context from '../lib/panda-context'
 
 interface Props {
   title: string
@@ -15,7 +15,7 @@ const { title } = Astro.props
 
 <panda.main display="flex" height="calc(100vh - env(safe-area-inset-bottom))">
   <Stack height="full" minW="60" overflow="auto" px="12" py="8">
-    <panda.a title="Token documentation" fontWeight="bold" fontSize="2xl" href="/" display="flex" gap="2">
+    <panda.a aria-label="Token documentation" fontWeight="bold" fontSize="2xl" href="/" display="flex" gap="2">
       {context.logo ? <panda.img src={context.logo} width="16" alt="logo" /> : <Logo />}
     </panda.a>
     <panda.div mt="4">
@@ -24,8 +24,8 @@ const { title } = Astro.props
     <SideNav />
   </Stack>
 
-  <Container width="full" overflow="auto">
-    <panda.div px="4" pt="14" pb="8">
+  <Container width="full" overflow="auto" pb="10">
+    <panda.div px="4" pt="10" pb="8">
       <panda.h1 fontSize="3xl" fontWeight="semibold" mb="8" letterSpacing="tight">
         {title}
       </panda.h1>
@@ -33,3 +33,4 @@ const { title } = Astro.props
     </panda.div>
   </Container>
 </panda.main>
+
