--- a/packages/studio/src/pages/line-heights.astro
+++ b/packages/studio/src/pages/line-heights.astro
@@ -1,11 +1,10 @@
 ---
-import { FontTokens } from '../components/font-tokens'
+import FontTokens from '../components/font-tokens'
 import Layout from '../layouts/Layout.astro'
 import Sidebar from '../layouts/Sidebar.astro'
+import * as context from '../lib/panda-context'
 
-import context from '../lib/panda.context'
-
-const tokens = context.getCategory('lineHeights')
+const tokens = context.getTokens('lineHeights')
 ---
 
 <Layout>
