--- a/packages/studio/src/pages/playground/typography.astro
+++ b/packages/studio/src/pages/playground/typography.astro
@@ -1,11 +1,11 @@
 ---
-import { TypographyPlayground } from '../../components/typography-playground'
+import TypographyPlayground from '../../components/typography-playground'
 import Layout from '../../layouts/Layout.astro'
 import Sidebar from '../../layouts/Sidebar.astro'
 ---
 
 <Layout>
-  <Sidebar>
+  <Sidebar title="Playground / Typography">
     <TypographyPlayground client:load />
   </Sidebar>
 </Layout>
