--- a/packages/studio/src/layouts/Sidebar.astro
+++ b/packages/studio/src/layouts/Sidebar.astro
@@ -4,7 +4,6 @@ import '../../styled-system/styles.css'
 import SideNav from '../components/side-nav.astro'
 import ThemeToggle from '../components/theme-toggle.astro'
 import { Logo } from '../icons/logo'
-import * as context from '../lib/panda-context'
 
 interface Props {
   title: string
@@ -16,7 +15,7 @@ const { title } = Astro.props
 <panda.main display="flex" height="calc(100vh - env(safe-area-inset-bottom))">
   <Stack height="full" minW="60" overflow="auto" px="12" py="8">
     <panda.a aria-label="Token documentation" fontWeight="bold" fontSize="2xl" href="/" display="flex" gap="2">
-      {context.logo ? <panda.img src={context.logo} width="16" alt="logo" /> : <Logo />}
+      <Logo />
     </panda.a>
     <panda.div mt="4">
       <ThemeToggle />
