refactor: url builder

--- a/packages/studio/src/components/side-nav.astro
+++ b/packages/studio/src/components/side-nav.astro
@@ -1,6 +1,7 @@
 ---
-import { navItems } from '../lib/constants'
 import { panda, Stack } from '../../styled-system/jsx'
+import { navItems } from '../lib/constants'
+import { getUrl } from "../lib/url"
 import SideNavItem from './side-nav-item.astro'
 ---
 
@@ -12,7 +13,7 @@ import SideNavItem from './side-nav-item.astro'
         {
           navItems
             .filter((item) => item.type === 'token')
-            .map((item) => <SideNavItem href={`${import.meta.env.BASE_URL}${item.id}`}>{item.label}</SideNavItem>)
+            .map((item) => <SideNavItem href={getUrl(item.id)}>{item.label}</SideNavItem>)
         }
       </panda.ul>
     </div>
@@ -22,7 +23,7 @@ import SideNavItem from './side-nav-item.astro'
         {
           navItems
             .filter((item) => item.type === 'playground')
-            .map((item) => <SideNavItem href={`/${import.meta.env.BASE_URL}${item.id}`}>{item.label}</SideNavItem>)
+            .map((item) => <SideNavItem href={getUrl(item.id)}>{item.label}</SideNavItem>)
         }
       </panda.ul>
     </div>
